--- a/kiralysag.ui
+++ b/kiralysag.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>404</width>
-    <height>260</height>
+    <width>616</width>
+    <height>494</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,14 +16,66 @@
   <property name="statusTip">
    <string>Designed by Andras Vincze</string>
   </property>
-  <widget class="QWidget" name="centralwidget"/>
+  <widget class="QWidget" name="centralwidget">
+   <layout class="QGridLayout" name="gridLayout_2">
+    <item row="2" column="0">
+     <widget class="QLineEdit" name="lineEdit">
+      <property name="text">
+       <string>valami</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="0">
+     <widget class="QScrollArea" name="scrollArea">
+      <property name="widgetResizable">
+       <bool>true</bool>
+      </property>
+      <widget class="QWidget" name="scrollAreaWidgetContents">
+       <property name="geometry">
+        <rect>
+         <x>0</x>
+         <y>0</y>
+         <width>592</width>
+         <height>355</height>
+        </rect>
+       </property>
+       <layout class="QGridLayout" name="gridLayout">
+        <item row="0" column="0">
+         <widget class="QLabel" name="label">
+          <property name="acceptDrops">
+           <bool>false</bool>
+          </property>
+          <property name="text">
+           <string>Welcome to productivity tool 1.0</string>
+          </property>
+          <property name="openExternalLinks">
+           <bool>false</bool>
+          </property>
+          <property name="textInteractionFlags">
+           <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByMouse</set>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+     </widget>
+    </item>
+    <item row="1" column="0">
+     <widget class="QPushButton" name="pushButton">
+      <property name="text">
+       <string>Close Application</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
+  </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>404</width>
-     <height>18</height>
+     <width>616</width>
+     <height>26</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -50,7 +102,7 @@
      </property>
      <property name="icon">
       <iconset>
-       <normaloff>../Downloads/icons8-bring-to-front-80.png</normaloff>../Downloads/icons8-bring-to-front-80.png</iconset>
+       <normaloff>../../Downloads/icons8-new-resume-template-96.png</normaloff>../../Downloads/icons8-new-resume-template-96.png</iconset>
      </property>
      <addaction name="actionTo_open"/>
      <addaction name="actionTo_close"/>
@@ -65,7 +117,7 @@
   <action name="actionOpen_Application">
    <property name="icon">
     <iconset>
-     <normaloff>../Downloads/icons8-file-128.png</normaloff>../Downloads/icons8-file-128.png</iconset>
+     <normaloff>../../Downloads/icons8-open-document-80.png</normaloff>../../Downloads/icons8-open-document-80.png</iconset>
    </property>
    <property name="text">
     <string>Open Application</string>
@@ -74,7 +126,7 @@
   <action name="actionClose_Application">
    <property name="icon">
     <iconset>
-     <normaloff>../Downloads/icons8-close-sign-80.png</normaloff>../Downloads/icons8-close-sign-80.png</iconset>
+     <normaloff>../../Downloads/icons8-close-sign-80.png</normaloff>../../Downloads/icons8-close-sign-80.png</iconset>
    </property>
    <property name="text">
     <string>Close Application</string>
@@ -83,16 +135,19 @@
   <action name="actionShow_Running_Applications">
    <property name="icon">
     <iconset>
-     <normaloff>../Downloads/icons8-run-command-80.png</normaloff>../Downloads/icons8-run-command-80.png</iconset>
+     <normaloff>../../Downloads/icons8-run-command-80.png</normaloff>../../Downloads/icons8-run-command-80.png</iconset>
    </property>
    <property name="text">
     <string>Show Running Applications</string>
+   </property>
+   <property name="statusTip">
+    <string>Click to show currently running applications</string>
    </property>
   </action>
   <action name="actionExit">
    <property name="icon">
     <iconset>
-     <normaloff>../Downloads/icons8-exit-80.png</normaloff>../Downloads/icons8-exit-80.png</iconset>
+     <normaloff>../../Downloads/icons8-exit-80.png</normaloff>../../Downloads/icons8-exit-80.png</iconset>
    </property>
    <property name="text">
     <string>Exit</string>
@@ -107,7 +162,7 @@
   <action name="actionStart_Coding">
    <property name="icon">
     <iconset>
-     <normaloff>../Downloads/icons8-code-file-96.png</normaloff>../Downloads/icons8-code-file-96.png</iconset>
+     <normaloff>../../Downloads/icons8-developer-64.png</normaloff>../../Downloads/icons8-developer-64.png</iconset>
    </property>
    <property name="text">
     <string>Start Coding</string>
@@ -142,6 +197,38 @@
     <hint type="destinationlabel">
      <x>201</x>
      <y>129</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionShow_Running_Applications</sender>
+   <signal>triggered()</signal>
+   <receiver>label</receiver>
+   <slot>clear()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>288</x>
+     <y>207</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>pushButton</sender>
+   <signal>clicked()</signal>
+   <receiver>lineEdit</receiver>
+   <slot>clear()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>378</x>
+     <y>423</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>379</x>
+     <y>452</y>
     </hint>
    </hints>
   </connection>
